WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42753
[QT] Leak and few more fixes to qt port of geolocation
https://bugs.webkit.org/show_bug.cgi?id=42753
Summary
[QT] Leak and few more fixes to qt port of geolocation
Mahesh Kulkarni
Reported
2010-07-21 07:22:40 PDT
We have a memory leak of QGeoPositionInfoSource in qt port of geolocation. Default values of attributes (QGeoCoordinate) are set to "0.0" which is a valid number for few properties. Leave default value to the caller function.
Attachments
patch
(2.81 KB, patch)
2010-07-21 07:36 PDT
,
Mahesh Kulkarni
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mahesh Kulkarni
Comment 1
2010-07-21 07:36:59 PDT
Created
attachment 62179
[details]
patch Fixes memory leak and default values set to attributes.
Kenneth Rohde Christiansen
Comment 2
2010-07-21 07:57:08 PDT
Comment on
attachment 62179
[details]
patch where sit he leak fix?
Mahesh Kulkarni
Comment 3
2010-07-21 08:04:02 PDT
(In reply to
comment #2
)
> (From update of
attachment 62179
[details]
) > where sit he leak fix?
Thanks for the review, +++ WebCore/platform/qt/GeolocationServiceQt.cpp (working copy) @@ -55,6 +55,7 @@ GeolocationServiceQt::~GeolocationServiceQt() { + delete m_location;
WebKit Commit Bot
Comment 4
2010-07-21 08:12:40 PDT
Comment on
attachment 62179
[details]
patch Clearing flags on attachment: 62179 Committed
r63819
: <
http://trac.webkit.org/changeset/63819
>
WebKit Commit Bot
Comment 5
2010-07-21 08:12:45 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 6
2010-08-04 03:31:20 PDT
Revision
r63819
cherry-picked into qtwebkit-2.1 with commit f63e272bc955d7c6685fb9853348ed3c07de6358
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug