2010-07-21  Mahesh Kulkarni  <mahesh.kulkarni@nokia.com>

Reviewed by Laszlo Gombos.

        [QT] Leak and few more fixes to qt port of geolocation
        https://bugs.webkit.org/show_bug.cgi?id=42753

        Fixes memory leak and default values set to attributes.

        Memory leak fix no new test case added.

        * platform/qt/GeolocationServiceQt.cpp: Added.
        (WebCore::GeolocationServiceQt::~GeolocationServiceQt):
        (WebCore::GeolocationServiceQt::positionUpdated):

Canonical link: https://commits.webkit.org/54656@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63819 268f45cc-cd09-0410-ab3c-d52691b4dbfc